--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="resort-description">
           <h2>{{ResortTitle}}</h2>
-          <h2 class="island-name">{{Island}}</h2>
+          <h4 class="island-name">{{Island}}</h4>
 
           <ul class="resort-description-list">
             {{ResortDescription}}
@@ -339,6 +339,7 @@
   {
     "ResortTitle": "Sandals Montego Bay",
     "Island": "Jamaica",
+    "City": "Montego Bay",
     "ResortDescription": "The first-ever Sandals Resort\nSet on Jamaica’s largest white-sand beach\nClose proximity to Montego Bay's attractions & nightlife\nQuick 10min drive from Sangster International Airport \nStay at 1, Play at 2 full exchange privileges at the nearby Sandals Royal Caribbean\nLatitudes Overwater Bar and Over-the-Water Wedding Chapel \n12 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa \n7 Pools and 3 Whirlpools\nWatersports include paddleboards, kayaks, snorkeling and motorized sports like waterskiing, windsurfing, tubing and more\n",
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
@@ -355,6 +356,7 @@
   {
     "ResortTitle": "Sandals Royal Caribbean",
     "Island": "Jamaica",
+    "City": "Montego Bay",
     "ResortDescription": "Jamaica’s only resort with a Private Offshore Island & Secluded Beach \nHome to the Caribbean’s first Over-the-Water Bungalows \nClose proximity to Montego Bay's attractions & nightlife\nQuick 10min drive from Sangster International Airport \nStay at 1, Play at 2 exchange privileges at the nearby Sandals Montego Bay\nBritish-style afternoon tea served daily in the Tea Room\n9 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa \n8 Freshwater Pools, 1 Scuba Dive Pool and 6 Whirlpools \nWatersports include paddleboards, kayaks, snorkeling, Hobie Cats, windsurfing and more\n",
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Adventure",
@@ -371,6 +373,7 @@
   {
     "ResortTitle": "Sandals Negril",
     "Island": "Jamaica",
+    "City": "Negril",
     "ResortDescription": "Set on the longest, best stretch of Negril’s Seven Mile Beach\nOffers one of the best picture-perfect sunsets in the Caribbean \nEvery room is just a few steps away from the beach\nPowdery white sand beach and turquoise waters\nEasy access to deep-sea fishing \nEco-friendly resort with EarthCheck certification\n9 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa  \n3 Freshwater Pools, 1 Scuba Dive Pool and 3 Whirlpools\nWatersports include paddleboards, kayaks, Aqua Trikes, Hobie Cats, and motorized sports like waterskiing, windsurfing, wakeboarding, tubing and more\n",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
@@ -387,6 +390,7 @@
   {
     "ResortTitle": "Sandals Ochi",
     "Island": "Jamaica",
+    "City": "Ocho Rios",
     "ResortDescription": "Considered the true Garden of Eden, is this expansive resort situated on over 100-acres \nAccess to Jamaica’s most popular golf course, Upton Estate Golf & Country Club \nPerfect for every mood, part of the resort is private and serene, and the other part features Ochi Beach Club for upbeat and lively entertainment\nSandals first speakeasy bar, the Rabbit Hole\nThe Caribbean’s largest Rock-Climbing Wall\nOffers full exchange privileges at all the nearby Sandals Resorts\n16 Unique Dining Experiences and 11 Bars\nFitness Center and Two Red Lane® Spas with a Solarium \n7 Freshwater Pools, 1 Scuba Dive Pool, 98 villa pools and 22 whirlpools\nNearby the world-famous Dunn’s River Falls and Martha Brae bamboo river rafting\n",
     "IdealFor": "Golf Lovers",
     "IdealFor2": "Food and Drink Lovers",
@@ -403,6 +407,7 @@
   {
     "ResortTitle": "Sandals Royal Plantation",
     "Island": "Jamaica",
+    "City": "Ocho Rios",
     "ResortDescription": "All Butler, all Oceanview suites in this authentic Jamaican boutique-like resort \nFeatures two private cove beaches with beach service \nAccess to Jamaica’s most popular golf course, Upton Estate Golf & Country Club \nOffers full exchange privileges at all the nearby Sandals Resorts\nJamaica’s only champagne and caviar bar \n24hr In-Suite dining is always available\n5 Unique Dining Experiences and 3 Bars\nFitness Center and Red Lane® Spa\n2 Freshwater Pools and 1 Whirlpool \nNearby the world-famous Dunn’s River Falls and Martha Brae bamboo river rafting\n",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Food and Drink Lovers",
@@ -419,6 +424,7 @@
   {
     "ResortTitle": "Sandals South Coast",
     "Island": "Jamaica",
+    "City": "Whitehouse",
     "ResortDescription": "European-style architecture nestled on a 500-acre nature preserve\nSet on a 2-mile stretch of Jamaica's south coast's most pristine white-sand beach\nOver-the-Water collection includes Over-the-Water Bungalows, Serenity Wedding Chapel, and Latitudes Overwater Bar \nSouth Seas Rondoval Village featured the Caribbean’s longest swim-up pool\nBeachside food trucks like Chicken Dippers and Taco Truck\nTennis and pickleball courts and endless nearby attractions like Pelican Bar or YS Falls\nFitness Center and Red Lane® Spa\n4 beachfront freshwater pools, including Jamaica’s largest zero-entry pool\n9 Unique Dining Experiences and 7 Bars\nWatersports include paddleboards, kayaks, snorkeling, Hobie Cats, windsurfing and more",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
@@ -436,6 +442,7 @@
     "ResortTitle": "Sandals Dunns River",
     "ResortHandle": "Sandals Dunn's River",
     "Island": "Jamaica",
+    "City": "Ocho Rios",
     "ResortDescription": "Sandals’ newest property in Jamaica, located at the heart of Ocho Rios \nLocated minutes from Jamaica’s most iconic attraction, Dunn’s River Falls\nOffers full exchange privileges at all the nearby Sandals Resorts\nQuick 30min drive from Ian Fleming International Airport\nAccess to Jamaica’s most popular golf course, Upton Estate Golf & Country Club \nFeatures unique culinary concepts like Blum Coffeeshop and Dunn’s Rum Club\nOffers Island Inclusive, an off-site dining program created to experience local restaurants\n12 Unique Dining Experiences and 9 Bars\nFitness Center and Red Lane® Spa\n5 Freshwater Pools and 2 Whirlpools\n",
     "IdealFor": "Adventure Lovers",
     "IdealFor2": "Golf Lovers",
@@ -452,6 +459,7 @@
   {
     "ResortTitle": "Sandals Royal Bahamian",
     "Island": "Bahamas",
+    "City": "Nassau",
     "ResortDescription": "Re-imagined Beachfront Resort with a private offshore island, Sandals Barefoot Cay including two more beaches to explore, ideal for relaxing and snorkeling \nQuick 15min drive from Lynden Pindling International Airport\nEasy access to duty-free shopping, tours and casinos in Downtown Nassau  \nAll-new Coconut Grove lounge area with food trucks, bar and nightly entertainment \nOffers Island Inclusive, an off-site dining program created to experience local restaurants\nComplimentary MINI Cooper for guests in select suites to explore Nassau \n12 Unique Dining Experiences and 8 Bars\nFitness Center and three Red Lane® Spa locations\n7 Freshwater Pools and 3 Whirlpool \nRolls Royce private transfers for top-tier suites \n",
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
@@ -468,6 +476,7 @@
   {
     "ResortTitle": "Sandals Grenada",
     "Island": "Grenada",
+    "City": "St. George’s",
     "ResortDescription": "Known as the ‘Spice Isle”, this exotic getaway is located on Pink Gin Beach\nOnly 5min drive from Maurice Bishop International Airport\nVolcanic island with exotic black-sand beaches\nClose proximity to Grenada’s tours, nature attractions & vibrant nightlife\nFeatures world-class scuba diving and underwater Sculpture Park\nLocal ingredients from the Spice Island, including nutmeg and chocolate, are scattered throughout the resort’s menus and spa treatments\n10 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa \n5 Freshwater Pools, 1 Scuba Dive Pool and 2 Whirlpools\nEasy access to deep sea fishing adventure \n",
     "IdealFor": "Dive Lover",
     "IdealFor2": "Adventure Lovers",
@@ -484,6 +493,7 @@
   {
     "ResortTitle": "Sandals Barbados",
     "Island": "Barbados",
+    "City": "St. Lawrence",
     "ResortDescription": "Enchanting paradise situated on the pristine white sands of Dover Beach\nQuick 15min drive from Grantley Adams International Airport \nSet along the largest and longest river pool in Barbados\nWalking distance to shopping and nightlife in St. Lawrence Gap \nStay at 1, Play at 2 full exchange privileges at Sandals Royal Barbados \nGlobal Beer Bar and 4 Lane Bowling at Lovers Lanes\n10 Unique Dining Experiences and 8 Bars\nFitness Center and Red Lane Spa\n3 Freshwater Pools and 2 Whirlpools\nHobie Cats, paddleboards, kayaks and glass-bottom boat\n",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
@@ -500,6 +510,7 @@
   {
     "ResortTitle": "Sandals Royal Barbados",
     "Island": "Barbados",
+    "City": "St. Lawrence",
     "ResortDescription": "Indulge in luxury at this all-suite resort featuring award-winning accommodations like SkyPool Suites, Swim-Up Suites, and Millionaire Suites.  \nEvery suite includes a private Tranquility Soaking Tub™ for two\nStay at 1, Play at 2 full exchange privileges at Sandals Barbados \nLargest glass-fronted infinity pool in the Eastern Caribbean \nSandals first rooftop pool, restaurant and bar overlooking the ocean\nGlobal Beer Bar and 4-Lane Bowling Alley at Lovers Lanes\n10 Unique Dining Experiences and 6 Bars\nFitness Center and 15,000 sq ft Red Lane® Spa\n8 Freshwater Pools, 1 Scuba Dive Pool and 4 whirlpools\nPADI-Certified SCUBA diving and equipment, with 27 dive sites\n",
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Food and Drink Lovers",
@@ -516,6 +527,7 @@
   {
     "ResortTitle": "Sandals Halcyon Beach",
     "Island": "Saint Lucia",
+    "City": "Castries",
     "ResortDescription": "A “Garden of Eden” with tropical gardens hidden along pristine white-sand beaches\nFrench-Caribbean style buildings no taller than two stories high\nMost laid-back Sandals resort in Saint Lucia\nStay at 1, play at 3 – full exchange privileges at the other Sandals resorts\nHome to St Lucia’s longest swim-up pool \nComplimentary green fees and access to Cap Estate Golf & Country Club\n7 Unique Dining Experiences and 7 Bars\nStunning Over-the-Water Restaurant, Kelly’s Dockside\nFitness Center and Red Lane® Spa\n2 Freshwater Pools, 1 Saltwater Pool, and 3 Whirlpools\n",
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
@@ -532,6 +544,7 @@
   {
     "ResortTitle": "Sandals Regency La Toc",
     "Island": "Saint Lucia",
+    "City": "Gros-Islet",
     "ResortDescription": "Known as the “Emerald of the Caribbean” with sparkling emerald waters\nSet on a 220-acre estate known for its lush, tropical scenery\nHalf-mile, crescent-shaped beach off a sloping hillside\nStay at 1, play at 3 – full exchange privileges at the other Sandals resorts\nSunset Bluff Suites offer 180-degree views, private infinity pool and whirlpool \nComplimentary green fees and access to Cap Estate Golf & Country Club\n9-holes located directly on the resort at Sandals Regency La Toc Golf course\nPADI-Certified SCUBA diving and equipment, world famous reefs and wrecks \n9 Unique Dining Experiences and 8 Bars\n3 Freshwater Pools and 4 Whirlpools\n",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
@@ -548,6 +561,7 @@
   {
     "ResortTitle": "Sandals Grande St Lucian",
     "Island": "Saint Lucia",
+    "City": "Gros-Islet",
     "ResortDescription": "Located on Rodney Bay peninsula, known for the calmest waters in Saint Lucia\nMile-long beach with views of volcanic mountains\nLagoon swim-up rooms with direct pool access from the patio \nStay at 1, play at 3 – full exchange privileges at the other Sandals resorts\nComplimentary green fees and access to Cap Estate Golf & Country Club\n8 Over the Water Bungalows and Over the Water Wedding Chapel\n12 Unique Dining Experiences and 6 Bars\nPADI-Certified SCUBA diving and equipment, world famous reefs and wrecks \n5 Freshwater Pools, 1 Scuba Dive Pool, and 3 Whirlpools\nFitness Center and Red Lane Spa\n",
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Golf Lovers",
@@ -564,6 +578,7 @@
   {
     "ResortTitle": "Sandals Royal Curacao",
     "Island": "Curacao",
+    "City": "Santa Barbara",
     "ResortDescription": "44 oceanfront west-facing acres within a protected 3,000-acre Santa Barbara Estate\nLocated alongside the protected Underwater Marine Park with over 70 dive sites\nClose proximity to Willemstad, cultural attractions, and natural & historic sites \nSandals first two-level Dos Awa Infinity Pool overlooking the ocean\nAccess to 18-hole Pete Dye Golf Course at discounted rate \nOffers Island Inclusive, an off-site dining program created to experience local restaurants\n3 Freshwater Pools, 1 Natural Water Pool and 2 Whirlpools\nComplimentary MINI Cooper for guests in select suites to explore Curacao\n11 Unique Dining Experiences, including food trucks, and 13 Bars \nFitness Center and Red Lane® Spa\n",
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Pool Lovers",
@@ -580,6 +595,7 @@
   {
     "ResortTitle": "Sandals Grande Antigua",
     "Island": "Antigua",
+    "City": "St. John's",
     "ResortDescription": "Consistently voted the “World’s Most Romantic Resort” \nLocated on Dickenson Bay, Antigua’s best and most famous white-sand beach \nQuick 15min drive from V.C. Bird International Airport\nClose proximity to tours, shopping and Antigua’s capital, St. Johns \nOffers spectacular sunsets \nHome to the original “Rondoval” Suites with winding paths full of lush flora and fauna\nLargest pool in the Eastern Caribbean\n11 Unique Dining Experiences and 7 Bars\n6 Freshwater Pools and 6 Whirlpools \nFitness Center and Red Lane Spa\n",
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
@@ -596,6 +612,7 @@
   {
     "ResortTitle": "Sandals Saint Vincent",
     "Island": "Saint Vincent",
+    "City": "Buccament",
     "ResortDescription": "Exotic, untouched resort nestled between two seas at the edge of the Lesser Antilles\nSuites tucked away on a private cove bordered by lush forest and a gently flowing river\nHome to a collection of 32 islands, filled with natural wonders including waterfalls, rainforests, volcanic peaks and sandy shores\nSandals first one of a kind Two Story Overwater Villas\nFood and beverage concepts, inspired by the local bounty\nInnovative Suites featuring media rooms and fitness rooms with equipment \nOver 45 black sand and coral garden scuba dive sites to explore\n11 Unique Dining Experiences and 9 Bars\nFitness Center and Red Lane® Spa\n4 Freshwater Pools, 1 Scuba Dive Pool, and 2 Whirlpools\n",
     "IdealFor": "",
     "IdealFor2": "Dive Lovers",
@@ -612,6 +629,7 @@
   {
     "ResortTitle": "Beaches Ocho Rios",
     "Island": "Jamaica",
+    "City": "Ocho Rios",
     "ResortDescription": "Set on 22 acres of lush tropical garden and two private white-sand cove beaches \nAccess to Jamaica’s most popular golf course, Upton Estate Golf & Country Club\nPirates Island Waterpark features waterslides, kid-friendly pools and a lazy river perfect for all ages\nPADI-Certified SCUBA diving and equipment\nKids Camp & Nursery with certified nannies (INA and IBCCES certified)\nSesame Street® themed activities with daily character appearance\nThe Caribbean’s first certified Autism Center\n7 Unique Dining Experiences and 7 Bars\nState-of-the-art fitness center and Red Lane® Spa\nNearby the world-famous Dunn’s River Falls and Martha Brae bamboo river rafting\n",
     "IdealFor": "Family Fun. ",
     "IdealFor2": "Watersports",
@@ -628,6 +646,7 @@
   {
     "ResortTitle": "Beaches Negril",
     "Island": "Jamaica",
+    "City": "Negril",
     "ResortDescription": "Located on the best and widest stretch of Negril’s seven-mile white sand beach \nExpansive Three & Four Bedroom Butler Suites for the whole family\nHome to the Pirates Island Water Theme Park with 8 waterslides and several toddler pools\nSesame Street® themed activities with daily character appearance\nKids Camp & Nursery with certified nannies (INA and IBCCES certified)\nThe Caribbean’s first certified Autism Centers\nState-of-the-art fitness center and Red Lane® Spa\nProfessional instruction for water sports and extensive offerings, including windsurfing! \nPADI-Certified SCUBA diving and equipment\n13 Unique Dining Experiences and 5 Bars\n",
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
@@ -644,6 +663,7 @@
   {
     "ResortTitle": "Beaches Turks and Caicos",
     "Island": "Turks and Caicos",
+    "City": "Providenciales",
     "ResortDescription": "Situated on world-renowned Grace Bay Beach, 12 miles of powdery white sand beach and turquoise waters\nQuick 20min drive from Providenciales International Airport\nExpansive Three & Four Bedroom Butler Suites for the whole family\nHome to Pirate’s Island Waterpark, featuring a Surf Simulator, 8 waterslides, and a kids-only swim-up bar \n23 Unique Dining Experiences and 14 bars, from casual stops to elevated dinners\nSesame Street® themed activities with daily character appearance\nRanked one of the top ten best scuba diving destinations in the world \nState-of-the-art fitness center and Red Lane® Spa\n10 pools, 4 whirlpools & 1 scuba diving pool \nProfessional instruction for water sports including Hobie Cats, paddleboards, kayaks\n",
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
