--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="resort-description">
           <h2>{{ResortTitle}}</h2>
-          <h4 class="island-name">{{Island}}</h4>
+          <h4 class="island-name">{{City}}, {{Island}}</h4>
 
           <ul class="resort-description-list">
             {{ResortDescription}}
