--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           <div data-id="dining" class="tab">Dining & Bars</div>
           <!-- <div data-id="watersports" class="tab">Watersports</div>
           <div data-id="island" class="tab">Island Tours</div> -->
+          <div class="button"></div>
         </div>
         <div class="resort-images suggested active">
           <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
@@ -172,7 +173,7 @@
       <div class="filters-title">
         <div class="filters-title-wrapper">
           <h1 class="heading-2">Build Your Dream Vacation</h1>
-          <h4 class="heading-3">Select Your Guest Profile and <span class="white">Up To Three</span> Additional Preferences, </br>Then Press the Submit Preferences Button to Explore Your Recommended Resort Options</h4>
+          <h4 class="heading-3">Select Your Guest Profile and <span class="white">Up To Three</span> Additional Preferences, </br>Then <span class="white">Press the Submit Preferences</span> Button to Explore Your Recommended Resort Options</h4>
           <div class="tag-breadcrumb">
 
           </div>
