--- a/index.html
+++ b/index.html
@@ -102,7 +102,14 @@
           <div data-id="dining" class="tab">Dining & Bars</div>
           <!-- <div data-id="watersports" class="tab">Watersports</div>
           <div data-id="island" class="tab">Island Tours</div> -->
-          <div class="button"></div>
+          <div class="buttons-wrapper">
+            <div class="back-button">
+              Back to map
+            </div>
+            <div class="button">
+              <a href="http://ltobe.sandals.com/" class="button-wrapper">Book Now</a>
+            </div>
+          </div>
         </div>
         <div class="resort-images suggested active">
           <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
