--- a/index.html
+++ b/index.html
@@ -890,8 +890,8 @@
     "City": "Negril",
     "ResortDescription": "Located on the best and widest stretch of Negril’s seven-mile white sand beach \nExpansive Three & Four Bedroom Butler Suites for the whole family\nHome to the Pirates Island Water Theme Park with 8 waterslides and several toddler pools\nSesame Street® themed activities with daily character appearance\nKids Camp & Nursery with certified nannies (INA and IBCCES certified)\nThe Caribbean’s first certified Autism Centers\nState-of-the-art fitness center and Red Lane® Spa\nProfessional instruction for Watersports and extensive offerings, including windsurfing! \nPADI-Certified SCUBA diving and equipment\n13 Unique Dining Experiences and 5 Bars\n",
     "IdealFor": "Family Fun",
-    "IdealFor2": "Watersports",
-    "IdealFor3": "Beach Lover",
+    "IdealFor2": "Watersports Lovers",
+    "IdealFor3": "Beach Lovers",
     "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean-food, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
@@ -907,7 +907,7 @@
     "City": "Providenciales",
     "ResortDescription": "Situated on world-renowned Grace Bay Beach, 12 miles of powdery white sand beach and turquoise waters\nQuick 20min drive from Providenciales International Airport\nExpansive Three & Four Bedroom Butler Suites for the whole family\nHome to Pirate’s Island Waterpark, featuring a Surf Simulator, 8 waterslides, and a kids-only swim-up bar \n23 Unique Dining Experiences and 14 bars, from casual stops to elevated dinners\nSesame Street® themed activities with daily character appearance\nRanked one of the top ten best scuba diving destinations in the world \nState-of-the-art fitness center and Red Lane® Spa\n10 pools, 4 whirlpools & 1 scuba diving pool \nProfessional instruction for Watersports including Hobie Cats, paddleboards, kayaks\n",
     "IdealFor": "Family Fun",
-    "IdealFor2": "Watersports",
+    "IdealFor2": "Watersports Lovers",
     "IdealFor3": "Dive Lovers",
     "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean-food, indian, french, jerk-shack, italian, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
