--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           <h4 class="heading-3 tag-text">Italian</h4>
         </div>
         <div class="tag">
-          <h4 class="heading-3 tag-text">Caribbean Food</h4>
+          <h4 class="heading-3 tag-text">Caribbean</h4>
         </div>
         <div class="tag">
           <h4 class="heading-3 tag-text">Indian</h4>
@@ -585,7 +585,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Foodie",
-    "Tags": "adults-only, more-social, motorized-watersports, glass-bottom-boat, caribbean-food, teppanyaki, french, italian, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, motorized-watersports, glass-bottom-boat, caribbean, teppanyaki, french, italian, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
@@ -602,7 +602,7 @@
     "IdealFor": "Foodie",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, cove-beach, more-tranquil, glass-bottom-boat, caribbean-food, indian, french, italian, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-tranquil, glass-bottom-boat, caribbean, indian, french, italian, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Caribbean/1 - Carousel_ResortHero_Slider/Sandals-Royal-Caribbean-Offshore-Island.jpg",
     "Beaches": "images/Sandals Royal Caribbean/4 - Beaches/Sandals-SRC-BeachAerial-7.jpg",
     "Pool": "images/Sandals Royal Caribbean/3 - Pools/Sandals-Royal-Caribbean-Swim-ups.jpg",
@@ -615,7 +615,7 @@
     "ResortTitle": "Sandals Negril",
     "Island": "Jamaica",
     "City": "Negril",
-    "ResortDescription": "Set on the longest, best stretch of Negril’s Seven Mile Beach\nOffers one of the best picture-perfect sunsets in the Caribbean \nEvery room is just a few steps away from the beach\nPowdery white sand beach and turquoise waters\nEasy access to deep-sea fishing \nEco-friendly resort with EarthCheck certification\n9 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa  \n3 Freshwater Pools, 1 Scuba Dive Pool and 3 Whirlpools\nWatersports include paddleboards, kayaks, Aqua Trikes, Hobie Cats, and motorized sports like waterskiing, windsurfing, wakeboarding, tubing and more\n",
+    "ResortDescription": "Set on the longest, best stretch of Negril’s Seven Mile Beach\nOffers one of the best sunsets in the Caribbean \nEvery room is just a few steps away from the beach\nPowdery white sand beach and turquoise waters\nEasy access to deep-sea fishing \nEco-friendly resort with EarthCheck certification\n9 Unique Dining Experiences and 6 Bars\nFitness Center and Red Lane® Spa  \n3 Freshwater Pools, 1 Scuba Dive Pool and 3 Whirlpools\nWatersports include paddleboards, kayaks, Aqua Trikes, Hobie Cats, and motorized sports like waterskiing, windsurfing, wakeboarding, tubing and more\n",
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
@@ -653,7 +653,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Foodie",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, more-tranquil, golf, caribbean-food, french, italian, more-intimate, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, golf, caribbean, french, italian, more-intimate, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "",
     "Pool": "",
@@ -670,7 +670,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Foodie",
-    "Tags": "adults-only, more-tranquil, glass-bottom-boat, french, italian, more-social, more-expansive, scuba-on-property, caribbean-food, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-tranquil, glass-bottom-boat, french, italian, more-social, more-expansive, scuba-on-property, caribbean, long-stretch, tennis, pickle-ball, motorized-watersports, over-the-water-villa, rondoval-suite, swim-up-suite, jerk-shack, sushi, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "images/Sandals Royal Plantation/4 - Beaches/SRP_Beach_Detail.jpg",
     "Pool": "images/Sandals Royal Plantation/3 - Pools/croissantsandcaviar_sandalsroyalplantation-4.jpg",
@@ -688,7 +688,7 @@
     "IdealFor": "Adventure Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Foodie",
-    "Tags": "adults-only, cove-beach, more-social, motorized-watersports, glass-bottom-boat, tennis, caribbean-food, sushi, french, italian, more-expansive, scuba-on-property, rondoval-suite, swim-up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, cove-beach, more-social, motorized-watersports, glass-bottom-boat, tennis, caribbean, sushi, french, italian, more-expansive, scuba-on-property, rondoval-suite, swim-up-suite, golf, rum-club, jerk-shack, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Dunn's River/1 - Carousel_ResortHero_Slider/Sandals_Dunns_River_Beach.jpg",
     "Beaches": "images/Sandals Dunn's River/4 - Beaches/Sandals_Dunns_River_Beach.jpg",
     "Pool": "images/Sandals Dunn's River/3 - Pools/Sandals_Dunns_River_Pool_Whirlpool.jpg",
@@ -705,7 +705,7 @@
     "IdealFor": "Foodie",
     "IdealFor2": "Natural Attractions",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, cove-beach, more-expansive, motorised-watersport, pickle-ball, caribbean-food, steakhouse, french, italian, more-social, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, cove-beach, more-expansive, motorised-watersport, pickle-ball, caribbean, steakhouse, french, italian, more-social, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -739,7 +739,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Foodie",
-    "Tags": "long-stretch, more-expansive, bowling, more-social, bowling, caribbean-food, indian, french, italian, adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "long-stretch, more-expansive, bowling, more-social, bowling, caribbean, indian, french, italian, adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Barbados/1 - Carousel_ResortHero_Slider/IMG_9234.jpg",
     "Beaches": "images/Sandals Barbados/5 - Dining & Bars/SBR_TIKI_BEACH_BAR_0290.jpg",
     "Pool": "",
@@ -752,11 +752,11 @@
     "ResortTitle": "Sandals Royal Barbados",
     "Island": "Barbados",
     "City": "St. Lawrence",
-    "ResortDescription": "Indulge in luxury at this all-suite resort featuring award-winning accommodations like SkyPool Suites, Swim-Up Suites, and Millionaire Suites.  \nEvery suite includes a private Tranquility Soaking Tub™ for two\nStay at 1, Play at 2 full exchange privileges at Sandals Barbados \nLargest glass-fronted infinity pool in the Eastern Caribbean \nSandals first rooftop pool, restaurant and bar overlooking the ocean\nGlobal Beer Bar and 4-Lane Bowling Alley at Lovers Lanes\n10 Unique Dining Experiences and 6 Bars\nFitness Center and 15,000 sq ft Red Lane® Spa\n8 Freshwater Pools, 1 Scuba Dive Pool and 4 whirlpools\nPADI-Certified SCUBA diving and equipment, with 27 dive sites\n",
+    "ResortDescription": "Indulge in luxury at this all-suite resort featuring award-winning accommodations like SkyPool Suites, Swim-Up Suites, and Millionaire Suites  \nEvery suite includes a private Tranquility Soaking Tub™ for two\nStay at 1, Play at 2 full exchange privileges at Sandals Barbados \nLargest glass-fronted infinity pool in the Eastern Caribbean \nSandals first rooftop pool, restaurant and bar overlooking the ocean\nGlobal Beer Bar and 4-Lane Bowling Alley at Lovers Lanes\n10 Unique Dining Experiences and 6 Bars\nFitness Center and 15,000 sq ft Red Lane® Spa\n8 Freshwater Pools, 1 Scuba Dive Pool and 4 whirlpools\nPADI-Certified SCUBA diving and equipment, with 27 dive sites\n",
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Foodie",
     "IdealFor3": "Dive Lovers",
-    "Tags": "adults-only, long-stretch, more-social, bowling, caribbean-food, sushi, teppanyaki, indian, french, italian, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, glass-bottom-boat, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, long-stretch, more-social, bowling, caribbean, sushi, teppanyaki, indian, french, italian, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, glass-bottom-boat, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Barbados/1 - Carousel_ResortHero_Slider/SBR_SAINT_LAWRENCE_HOUSE_EXT_MAGIC_072.jpg",
     "Beaches": "images/Sandals Royal Barbados/4 - Beaches/SBR_MAIN_POOL_DRONE_0113.jpg",
     "Pool": "images/Sandals Royal Barbados/3 - Pools/SBR_MAIN_POOL_DRONE_0053.jpg",
@@ -824,7 +824,7 @@
     "IdealFor": "Foodie",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, cove-beach, golf, caribbean-food, french, italian, more-expansive, more-social, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
+    "Tags": "adults-only, cove-beach, golf, caribbean, french, italian, more-expansive, more-social, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
     "Images": "images/Sandals Royal Curacao/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalcuracao_resort-8.jpg",
     "Beaches": "images/Sandals Royal Curacao/4 - Beaches/untitled-194(B).jpg",
     "Pool": "images/Sandals Royal Curacao/3 - Pools/untitled-185.jpg",
@@ -892,7 +892,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports Lovers",
     "IdealFor3": "Beach Lovers",
-    "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean-food, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, glass-bottom-boat, caribbean, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
@@ -909,7 +909,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports Lovers",
     "IdealFor3": "Dive Lovers",
-    "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean-food, indian, french, jerk-shack, italian, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
+    "Tags": "families-with-kids, long-stretch, glass-bottom-boat, caribbean, indian, french, jerk-shack, italian, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
     "Beaches": "images/Beaches Turks and Caicos/4 - Beaches/DJI_20240120093216_0798_D-Edit.jpg",
     "Pool": "images/Beaches Turks and Caicos/3 - Pools/BTC_ITALIAN_POOL20-6-963-Edit.jpg",
