updated fonts | carausel etc

--- a/resort-include.html
+++ b/resort-include.html
@@ -42,7 +42,7 @@
               <h3>Food and Drink Lovers</h3>
           </div>
         </div>
-        <a href="http://ltobe.sandals.com/" class="Book-now-button">BOOK NOW</a>
+        <a href="http://ltobe.sandals.com/" class="Book-now-button">Book Now</a>
       </div>
       <div class="right-resort-details flex">
         <div class="controls"></div>
@@ -136,7 +136,7 @@
               <h3>Beach Lovers</h3>
           </div>
         </div>
-        <a href="http://ltobe.sandals.com/" class="Book-now-button">BOOK NOW</a>
+        <a href="http://ltobe.sandals.com/" class="Book-now-button">Book Now</a>
       </div>
       <div class="right-resort-details flex">
         <div class="controls"></div>
@@ -230,7 +230,7 @@
               <h3>Sport Lovers</h3>
           </div>
         </div>
-        <a href="http://ltobe.sandals.com/" class="Book-now-button">BOOK NOW</a>
+        <a href="http://ltobe.sandals.com/" class="Book-now-button">Book Now</a>
       </div>
       <div class="right-resort-details flex">
         <div class="controls"></div>
@@ -306,7 +306,7 @@
               <h3>Sport Lovers</h3>
           </div>
         </div>
-        <a href="http://ltobe.sandals.com/" class="Book-now-button">BOOK NOW</a>
+        <a href="http://ltobe.sandals.com/" class="Book-now-button">Book Now</a>
       </div>
       <div class="right-resort-details flex">
         <div class="controls"></div>
@@ -382,7 +382,7 @@
                 <h3>Sport Lovers</h3>
             </div>
           </div>
-          <a href="http://ltobe.sandals.com/" class="Book-now-button">BOOK NOW</a>
+          <a href="http://ltobe.sandals.com/" class="Book-now-button">Book Now</a>
         </div>
         <div class="right-resort-details flex">
           <div class="controls"></div>
